// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzCardListItem > Snapshots > should match snapshot - full featured item 1`] = `
"<div data-v-da7f5873="" class="fz-container fz-container--vertical gap-section-content-xs align-items-stretch p-8 hover:bg-semantic-info-50 hover:rounded">
  <!--
      Header row layout:
      - badge present → badge + actions
      - hasTitleOnly (no badge, no value) → title + actions (inline)
      - value present, no badge → actions only; title + value are in the second row
    -->
  <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-base align-items-center layout-default">
    <!-- Badge -->
    <div class="flex items-center justify-center truncate max-w-full gap-4 py-4 px-12 h-24 w-fit rounded-2xl bg-grey-500 text-core-white" title="Bozza">
      <!--v-if-->
      <p class="text-[inherit] text-sm">Bozza</p>
      <!--v-if-->
    </div><!-- Multiple actions popover -->
    <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-xs align-items-center layout-expand-last shrink-0 ml-auto">
      <!--
          The engine choice lives in FzPopover: a native popover placed in CSS where
          the browser can, FzFloating everywhere else. \`bottom-end\` keeps the menu
          hanging down-and-left from the ellipsis, inside the card's right edge.
        -->
      <div data-v-a9c08781="" class="fz-popover">
        <!--
      \`use-viewport\` asks FzFloating to clamp against the viewport rather than
      \`document.body\`: the body's height is not a boundary for fixed content, and on
      a page shorter than the viewport the clamp would drag the content over its own
      opener.
    -->
        <div data-v-a9c08781="">
          <div class="inline-flex w-full sm:w-auto"><span data-v-8090b1b6="" class="fz-icon-button-wrapper relative fz-icon-button-wrapper--frontoffice"><button data-v-8090b1b6="" type="button" aria-disabled="false" class="fz-button relative rounded flex flex-shrink items-center justify-center font-normal !text-[16px] !leading-[20px] border-1 border-solid border-transparent appearance-none gap-8 h-44 px-12 min-w-96 bg-core-white text-grey-500 !border-grey-200 hover:bg-grey-100 hover:!border-grey-200 focus:bg-core-white focus:!border-blue-600 disabled:bg-grey-50 disabled:text-grey-200 disabled:!border-grey-200" aria-expanded="false" aria-label="Mostra azioni"><div class="flex items-center justify-items-center"><span role="presentation" class="flex items-center justify-center shrink-0 w-[20px] h-[20px]"><svg class="svg-inline--fa fa-ellipsis-vertical h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="ellipsis-vertical" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 512"><path class="" fill="currentColor" d="M64 368a48 48 0 1 0 0 96 48 48 0 1 0 0-96zm0-160a48 48 0 1 0 0 96 48 48 0 1 0 0-96zM112 96A48 48 0 1 0 16 96a48 48 0 1 0 96 0z"></path></svg></span></div>
          <!--v-if-->
          <!--v-if--></button>
          <!--v-if--></span>
        </div>
        <div class="fz__floating__content w-full sm:w-auto bg-core-white fixed mt-4 fz-card-actions__menu" style="display: none;">
          <div data-v-ca7f3405="" class="fz__actionlist bg-core-white rounded flex flex-col gap-20 p-4 min-w-[240px]">
            <div class="flex flex-col gap-4" role="group" aria-labelledby="fz-action-section-label-2a84k84" environment="frontoffice">
              <!--v-if--><button data-v-f322a564="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 p-12 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
                <!--v-if-->
                <div data-v-f322a564="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-f322a564="" class="text-base text-left" title="Action A">Action A</span>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </button><button data-v-f322a564="" aria-disabled="false" aria-selected="false" type="button" class="group inline-flex max-w-full rounded border border-transparent border-2 transition-colors duration-200 gap-2 p-12 flex-row gap-8 text-core-black hover:bg-background-alice-blue hover:!text-blue-500 focus:!border-blue-200 focus:!outline-none focus:text-core-black">
                <!--v-if-->
                <div data-v-f322a564="" class="flex flex-1 flex-col gap-4 overflow-hidden"><span data-v-f322a564="" class="text-base text-left" title="Action B">Action B</span>
                  <!--v-if-->
                </div>
                <!--v-if-->
              </button>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div><!-- Title + value row (when badge or value is present) -->
<!-- Title Only -->
<div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-sm align-items-center layout-space-between">
  <!-- Title and indicator -->
  <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-xs align-items-center layout-default min-w-0">
    <!-- Indicator --><span role="presentation" class="flex items-center justify-center shrink-0 size-[12.5px]"><svg class="svg-inline--fa fa-circle-small fa-xs h-[10px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle-small" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path class="" fill="currentColor" d="M0 256a160 160 0 1 1 320 0A160 160 0 1 1 0 256z"></path></svg></span><!-- Title -->
    <p class="min-w-0 flex-1 truncate">Fattura #001</p>
  </div><!-- Value -->
  <p class="text-base whitespace-nowrap">1.200,00 €</p>
</div>
<div data-v-da7f5873="" class="fz-container fz-container--vertical gap-section-content-none align-items-stretch">
  <p>Cliente: Rossi S.r.l.</p>
  <p>Scadenza: 31/03/2024</p>
</div>
</div>
<div class="w-full my-0">
  <div class="border-solid border-t-1 border-grey-200"></div>
</div>"
`;

exports[`FzCardListItem > Snapshots > should match snapshot - minimal (title only) 1`] = `
"<div data-v-da7f5873="" class="fz-container fz-container--vertical gap-section-content-xs align-items-stretch p-8">
  <!--v-if-->
  <!-- Title + value row (when badge or value is present) -->
  <!-- Title Only -->
  <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-sm align-items-center layout-space-between">
    <!-- Title and indicator -->
    <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-xs align-items-center layout-default min-w-0">
      <!-- Indicator -->
      <!--v-if-->
      <!-- Title -->
      <p class="min-w-0 flex-1 truncate">Item Title</p>
    </div><!-- Value -->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
<div class="w-full my-0">
  <div class="border-solid border-t-1 border-grey-200"></div>
</div>"
`;

exports[`FzCardListItem > Snapshots > should match snapshot - with showIndicator 1`] = `
"<div data-v-da7f5873="" class="fz-container fz-container--vertical gap-section-content-xs align-items-stretch p-8">
  <!--v-if-->
  <!-- Title + value row (when badge or value is present) -->
  <!-- Title Only -->
  <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-sm align-items-center layout-space-between">
    <!-- Title and indicator -->
    <div data-v-da7f5873="" class="fz-container fz-container--horizontal gap-section-content-xs align-items-center layout-default min-w-0">
      <!-- Indicator --><span role="presentation" class="flex items-center justify-center shrink-0 size-[12.5px]"><svg class="svg-inline--fa fa-circle-small fa-xs h-[10px]" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="circle-small" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path class="" fill="currentColor" d="M0 256a160 160 0 1 1 320 0A160 160 0 1 1 0 256z"></path></svg></span><!-- Title -->
      <p class="min-w-0 flex-1 truncate">Item</p>
    </div><!-- Value -->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
<div class="w-full my-0">
  <div class="border-solid border-t-1 border-grey-200"></div>
</div>"
`;
